# bone

./: .gitignore  .tool-test-output.txt  AGENTS.md  BACKGROUND_ACTIVITY_UI_REFACTOR_PLAN.md  CODEBASE_AUDIT.md  CODEBASE_AUDIT_PLAN.md  CODEBASE_AUDIT_SECTION1.md  CODEBASE_AUDIT_SECTION2.md  CODEBASE_AUDIT_SECTION9.md  COMPACTION_SETTINGS_SPLIT_PLAN.md  Cargo.toml  FEATURE_INVENTORY.md  FIX-HISTORY-RELOAD.md  HASHLINE_EDIT_PLAN.md  LOGIN_USAGE_SUPPORT_PLAN.md  PLAN.md  README.md  REFACTOR-APP-MOD.md  REFACTOR-AUDIT.md  REFACTOR-CORRECTNESS.md  REFACTOR-MAINTAINABILITY.md  REFACTOR_PLAN.md  REFACTOR_REPORT.md  REMAINING_WORK.md  REVIEW.md  SIMPLE_FILE_TOOLS_PLAN.md  SIMPLIFICATION_PLAN.md  TUI_THEME_REVAMP_PLAN.md  ask-user-redesign-plan.md  bonereview.md  build.rs  cleanup-plan.md  codebase-map.html  config.md  customization-plan.md  dead_test_report.md  ext-streamlining-implementation-plan.md  ext-streamlining.md  goal_mock_test.lua  grokreview.md  (+33 more)
bone-rs/: .npmignore  README.md  install.js  package.json
core/: Cargo.toml  build.rs  default-command-policy.yaml
core/defaults/: AGENTS.md  providers.yaml
core/defaults/lua/commands/: compact.lua  config.lua  memory.lua
core/defaults/lua/lib/: banner.lua  history.lua
core/defaults/lua/lib/ui/: menu.lua  pane.lua
core/defaults/lua/tools/: task_list.lua
core/src/: agent.rs  agent_tests.rs  chat.rs  commands.rs  lib.rs  pane_content.rs  pane_content_tests.rs  processes.rs  run.rs  session_db.rs  session_db_tests.rs  session_sink.rs  shell_split_tests.rs  update_check.rs  update_check_tests.rs  util.rs
core/src/config/: custom.rs  custom_tests.rs  domains.rs  error.rs  migration.rs  mod.rs  providers_config.rs  settings.rs  store.rs
core/src/config/pages/: general.yaml  providers.yaml  tools.yaml
core/src/ext/: api.rs  api_tests.rs  api_ui.rs  api_ui_tests.rs  catalog.rs  catalog_tests.rs  ctx.rs  ctx_tests.rs  engine.rs  inbox.rs  inbox_tests.rs  jobs.rs  jobs_tests.rs  loader.rs  loader_tests.rs  lua_tool.rs  mod.rs  ops_commands.rs  ops_events.rs  ops_plugins.rs  ops_tools.rs  seed_tests.rs  settings_registry.rs  snapshots.rs  types.rs  types_tests.rs
core/src/llm/: mod.rs  prompts.rs  provider.rs  token_tracker.rs
core/src/llm/providers/: anthropic.rs  anthropic_tests.rs  codex.rs  grok_build.rs  grok_build_tests.rs  mod.rs  providers_tests.rs
core/src/llm/providers/openai_compat/: mod.rs  openai_compat_tests.rs
core/src/rpc/: codec.rs  codec_tests.rs  mod.rs  rpc_tests.rs
core/src/runtime/: conn.rs  driver.rs  driver_tests.rs  event.rs  event_tests.rs  mod.rs  session.rs  session_tests.rs  timer.rs  view.rs  view_tests.rs
core/src/tools/: approval.rs  mod.rs  read_file.rs  registry.rs  registry_tests.rs  shell.rs  snapshot.rs  snapshot_tests.rs  types.rs  write_atomic.rs  write_file.rs
core/src/tools/command_policy/: mod.rs
core/src/tools/edit_file/: apply.rs  diff.rs  mod.rs  parser.rs  recovery.rs
core/tests/: approval_decision_test.rs  approval_test.rs  catalog_async_test.rs  catalog_e2e_test.rs  codex_provider_test.rs  command_policy_test.rs  compact_test.rs  daemon_subagents_test.rs  driver_turn_test.rs  edit_file_test.rs  extension_manager_seam_test.rs  history_menu_test.rs  interactive_esc_test.rs  lua_api_test.rs  lua_subagent_api_test.rs  lua_tool_nested_test.rs  mock_provider_injection_test.rs  openai_compat_test.rs  read_file_test.rs  remote_config_snapshot_test.rs  rpc_daemon_test.rs  session_db_test.rs  session_sink_test.rs  shell_test.rs  stream_tools_test.rs  tasklist_pane_test.rs  think_parser_test.rs  token_tracker_test.rs  tool_args_guard_test.rs  write_file_test.rs
core/tests/common/: mod.rs
core/tests/fixtures/: ask_user_ux.lua  menu_ux.lua  task_list.lua
defaults/: AGENTS.md  providers.yaml
docs/: migrate_config_picker.md  scheduled-tasks-plan.md  tool-improvements.md  undo-plan.md
examples_tmp/: biptest.rs
npm/: make-platform-packages.js
protocol/: Cargo.toml
review_output/: master_review.md  over_engineering_plan.md  review_batch1.md  review_batch2.md  review_batch3.md  review_batch4.md  review_batch5.md  review_batch6.md  simplification_findings.md
src/: agent.rs  chat.rs  config.rs  cron.rs  lib.rs  main.rs  pane_content.rs  run.rs  session_db.rs  session_db_tests.rs  session_sink.rs  shell_split.rs  update_check.rs
tasks/: line-reduction-plan.md
tests/: _observe_test.rs  approval_decision_test.rs  approval_test.rs  backend_test.rs  bottom_pane_test.rs  catalog_async_test.rs  catalog_e2e_test.rs  codex_provider_test.rs  command_policy_test.rs  compact_test.rs  diff_preview_test.rs  driver_turn_test.rs  dynamic_tools_test.rs  edit_file_test.rs  edit_file_unified_test.rs  extension_manager_seam_test.rs  input_test.rs  integration_test.rs  lua_api_test.rs  lua_tool_nested_test.rs  messages_test.rs  mock_provider_injection_test.rs  openai_compat_test.rs  read_file_test.rs  render_test.rs  rpc_daemon_test.rs  scheduled_tasks_test.rs  script_runner_test.rs  session_db_test.rs  session_sink_test.rs  skills_test.rs  stream_test.rs  stream_timeout_test.rs  stream_tools_test.rs  subagent_test.rs  tasklist_pane_test.rs  think_parser_test.rs  (+6 more)
tui/: Cargo.toml
tui/src/: cli.rs  deps.rs  install.rs  lib.rs  main.rs  main_tests.rs
tui/src/ui/: catalog.rs  fullscreen.rs  input.rs  jobs_pane.rs  jobs_pane_tests.rs  mod.rs  pane_page.rs  pane_page_tests.rs  picker.rs  process_view.rs  processes_pane.rs  queue_pane.rs  selectable_pane.rs  setup.rs  stats.rs  theme.rs  theme_tests.rs  tool_display.rs  transcript_view.rs
tui/src/ui/app/: app_tests.rs  editor.rs  editor_tests.rs  keymap.rs  mod.rs  paste.rs
tui/src/ui/app/stream/: keysink_tests.rs  mod.rs
tui/src/ui/commands/: mod.rs
tui/src/ui/render/: backend.rs  bottom_pane.rs  markdown.rs  messages.rs  mod.rs  render_tests.rs  wrap.rs
tui/tests/: backend_test.rs  bottom_pane_test.rs  diff_preview_test.rs  input_test.rs  integration_test.rs  messages_test.rs  render_test.rs  shell_render_test.rs  subagent_test.rs  tool_display_test.rs  unicode_stress_test.rs  wrap_test.rs
tui/tests/common/: mod.rs
(+221 files in other folders)
