[package]
name = "bone"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "macros", "process", "signal", "sync", "time", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10" }
ratatui = { version = "0.29", features = ["scrolling-regions", "unstable-rendered-line-info", "unstable-backend-writer"] }
crossterm = "0.28"
eventsource-stream = "0.2"
async-trait = "0.1"
futures-util = "0.3"
async-stream = "0.3"
unicode-width = "0.2"
sha2 = "0.10"
similar = "2"
strsim = "0.11"
dirs = "6"
num-format = "0.4.4"
syntect = { version = "5.3.0", features = ["default-syntaxes"] }
pulldown-cmark = "0.13.4"
rusqlite = { version = "0.34", features = ["bundled"] }
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "serialize"] }

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
