[package]
name = "bone"
version = "2.1.2"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "macros", "process", "signal", "sync", "time", "fs", "net"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10" }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info", "unstable-backend-writer", "scrolling-regions"], optional = true }
crossterm = { version = "0.28", optional = true }
eventsource-stream = "0.2"
async-trait = "0.1"
futures-util = "0.3"
async-stream = "0.3"
unicode-width = { version = "0.2", optional = true }
sha2 = "0.10"
similar = "2"
strsim = "0.11"
dirs = "6"
num-format = "0.4.4"
syntect = { version = "5.3.0", features = ["default-syntaxes"], optional = true }
pulldown-cmark = { version = "0.13.4", optional = true }
rusqlite = { version = "0.34", features = ["bundled"] }
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "serialize"] }

[features]
# `ui` pulls in the built-in ratatui TUI and its rendering-only deps. The core
# library (agent loop, tools, extensions, llm, session) compiles without it.
# Gate the decoupling with: cargo check --lib --no-default-features
default = ["ui"]
ui = ["dep:ratatui", "dep:crossterm", "dep:unicode-width", "dep:syntect", "dep:pulldown-cmark"]

# The binary is the TUI; it requires the `ui` feature. Cargo skips building it
# when `ui` is off, so `--no-default-features` checks core in isolation.
[[bin]]
name = "bone"
path = "src/main.rs"
required-features = ["ui"]

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
