[package]
name = "bone"
version = "2.2.3"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "macros", "process", "signal", "sync", "time", "fs", "net"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10" }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info", "unstable-backend-writer"], optional = true }
crossterm = { version = "0.28", optional = true }
eventsource-stream = "0.2"
async-trait = "0.1"
futures-util = "0.3"
async-stream = "0.3"
unicode-width = { version = "0.2", optional = true }
sha2 = "0.10"
base64 = "0.22"
# Clipboard image paste (UI-only). `arboard` reads the OS clipboard image as raw
# RGBA; `png` encodes it for the wire. Off the `--no-default-features` core path.
# `arboard` has no Android backend (its `platform` module is empty there), so it
# is declared per-target below and skipped on Android, which uses the external
# clipboard-command fallback instead.
png = { version = "0.17", optional = true }
similar = "2"
strsim = "0.11"
dirs = "6"
num-format = "0.4.4"
syntect = { version = "5.3.0", features = ["default-syntaxes"], optional = true }
pulldown-cmark = { version = "0.13.4", optional = true }
rusqlite = { version = "0.34", features = ["bundled"] }
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "serialize"] }

# Scroll-region `insert_before` evicts lines into native scrollback on
# Linux/macOS but ConPTY discards them, so enable `scrolling-regions` everywhere
# except Windows. On Windows ratatui falls back to its newline-scroll
# `insert_before`, which ConPTY preserves into scrollback. Cargo unions features
# for the same crate and ignores this table when building for Windows.
[target.'cfg(not(windows))'.dependencies]
ratatui = { version = "0.29", features = ["scrolling-regions"], optional = true }

# `arboard` has no Android clipboard backend, so it is only declared (and only
# compiled) off Android. The `ui` feature enables it via `dep:arboard`; on
# Android that dep is absent and the code paths are `cfg`-gated out.
[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = { version = "3", features = ["wayland-data-control"], optional = true }

[features]
# `ui` pulls in the built-in ratatui TUI and its rendering-only deps. The core
# library (agent loop, tools, extensions, llm, session) compiles without it.
# Gate the decoupling with: cargo check --lib --no-default-features
default = ["ui"]
ui = ["dep:ratatui", "dep:crossterm", "dep:unicode-width", "dep:syntect", "dep:pulldown-cmark", "dep:arboard", "dep:png"]

# The binary is the TUI; it requires the `ui` feature. Cargo skips building it
# when `ui` is off, so `--no-default-features` checks core in isolation.
[[bin]]
name = "bone"
path = "src/main.rs"
required-features = ["ui"]

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
