[package]
name = "bone-core"
version.workspace = true
edition.workspace = true

[lib]
name = "bone_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "macros", "process", "signal", "sync", "time", "fs", "net"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "yaml_serde", version = "0.10" }
eventsource-stream = "0.2"
async-trait = "0.1"
futures-util = "0.3"
async-stream = "0.3"
sha2 = "0.10"
base64 = "0.22"
similar = "2"
strsim = "0.11"
dirs = "6"
num-format = "0.4.4"
rusqlite = { version = "0.34", features = ["bundled"] }
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "serialize"] }
crossterm = { version = "0.28", optional = true }
bone-protocol = { path = "../protocol" }

[features]
default = []
# Enables crossterm-backed terminal queries (term_width, raw-mode check).
# The TUI crate enables this; headless builds do not.
tui = ["dep:crossterm"]

[build-dependencies]
